--- a/My Webpage/startbootstrap-agency-gh-pages/index.html
+++ b/My Webpage/startbootstrap-agency-gh-pages/index.html
@@ -163,7 +163,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-6 currentproject-item">
-            <a class="currentproject-link" data-toggle="modal" href="#portfolioModal1">
+            <a class="currentproject-link" data-toggle="modal" href="#cwModal1">
               <div class="currentproject-hover">
                 <div class="currentproject-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
@@ -177,7 +177,7 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 currentproject-item">
-            <a class="currentproject-link" data-toggle="modal" href="#portfolioModal2">
+            <a class="currentproject-link" data-toggle="modal" href="#cwModal2">
               <div class="currentproject-hover">
                 <div class="currentproject-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
@@ -191,7 +191,7 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 currentproject-item">
-            <a class="currentproject-link" data-toggle="modal" href="#portfolioModal3">
+            <a class="currentproject-link" data-toggle="modal" href="#cwModal3">
               <div class="currentproject-hover">
                 <div class="currentproject-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
@@ -776,6 +776,106 @@
         </div>
       </div>
     </div>
+
+    <!-- Current Work Modals -->
+
+    <!-- Modal 1 -->
+    <div class="portfolio-modal modal fade" id="cwModal1" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Search Engines</h2>
+                  <p class="item-intro text-muted">March 2018 - Present</p>
+                  <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
+                  <ul class = "list-inline">
+                     <li>The project aims at building a search engine for twitter data. The objective is to convert Natural Language Queries entered by users to Cassandra queries, which result in top tweets for the query presented.</li>
+                    <li>The search and data framework are setup on Amazon Web Services(AWS) and results are displayed on a web framework. </li>
+                    <li>Accuracy and Performance measures will be measured by benchmarking against the Twitter API.</li>
+
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> 
+
+    <!-- Modal 2 -->
+    <div class="portfolio-modal modal fade" id="cwModal2" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Object Recognition</h2>
+                  <p class="item-intro text-muted">March 2018 - Present</p>
+                  <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
+                  <ul class = "list-inline">
+                     <li>The aim of the project is to use CNNs and other deep learning models to recognize different objects in images with the aim of image summarization.</li>
+                    <li> As a future enhancement we intend to implement parts of Stanford's Visual QA system. </li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> 
+
+    <!-- Modal 3 -->
+    <div class="portfolio-modal modal fade" id="cwModal3" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Measuring a Cassandra Cluster</h2>
+                  <p class="item-intro text-muted">March 2018 - Present</p>
+                  <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
+                  <ul class = "list-inline">
+                     <li>This project focuses on measurements across a Cassandra cluster for various topologies. 
+                      We are particularly interested in measurements of latency and clock skew. The topologies consist of different arrangements of VMs, containers and physical hosts. </li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>            
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
