Added download resume button

--- a/My Webpage/startbootstrap-agency-gh-pages/index.html
+++ b/My Webpage/startbootstrap-agency-gh-pages/index.html
@@ -120,6 +120,10 @@
                   </a>
                 </li>                                
               </ul>
+              <br>
+              <div>
+                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="docs/resume.pdf" download="resume.pdf">Download Resume</a>              
+              </div>                              
             </div>
           </div>
           <!--<div class="col-sm-4">
