add resume button to header

--- a/My Webpage/startbootstrap-agency-gh-pages/index.html
+++ b/My Webpage/startbootstrap-agency-gh-pages/index.html
@@ -55,6 +55,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
+           <!-- <li class = "nav-item">
+              <a class="nav-link js-scroll-trigger" href="docs/resume.pdf" download="resume.pdf">Resume
+            </li> -->
           </ul>
         </div>
       </div>
