--- a/My Webpage/startbootstrap-agency-gh-pages/index.html
+++ b/My Webpage/startbootstrap-agency-gh-pages/index.html
@@ -121,7 +121,12 @@
                   <a href="mailto:sharans003@gmail.com?Subject=Hello from your website!"
                     <i class="fa fa-envelope"></i>
                   </a>
-                </li>                                
+                </li> 
+                <li class="list-inline-item">
+                  <a href="https://www.instagram.com/sharansrivatsa/">
+                    <i class="fa fa-instagram"></i>
+                  </a>
+                </li>                                                
               </ul>
               <br>
               <div>
@@ -516,7 +521,12 @@
                   <a href="mailto:sharans003@gmail.com?Subject=Hello from your website!"
                     <i class="fa fa-envelope"></i>
                   </a>
-                </li>                                
+                </li>  
+                <li class="list-inline-item">
+                  <a href="https://www.instagram.com/sharansrivatsa/">
+                    <i class="fa fa-instagram"></i>
+                  </a>
+                </li>                                                
               </ul>            
           </div>
         </div>
