--- a/My Webpage/startbootstrap-agency-gh-pages/index.html
+++ b/My Webpage/startbootstrap-agency-gh-pages/index.html
@@ -68,7 +68,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">Hi There!</div>
-          <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
+          <div class="intro-heading text-uppercase">Welcome to my World!</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#team">More about me!</a>
         </div>
       </div>
@@ -85,11 +85,13 @@
         </div>
         <div class="row">
           <div class="col-sm-6">
-              <p class="text-muted">I have a couple of years of experience as a Software Developer at a Startup called Scibler. Scibler is a Data Science company which worked on building an Automated assistant on the iOS platform. I worked mainly on the Natural Language Processing and Machine Learning side. I loved working here as I grow both at a personal and professional level. After helping build a Chatbot and getting it to a stable state, I decided to pursue my Master's in Computer Science specializing in Data Science. </p>
+              <p class="text-muted">I have a couple of years of experience as a Software Developer at a Startup called Scibler. Scibler is a Data Science company which worked on building an Automated assistant on the iOS platform. I worked mainly on the Natural Language Processing and Machine Learning side. I loved working here as I grow both at a personal and professional level. After helping build a the second product the Scibler Chatbot and getting it to a stable state, I decided to pursue my Master's in Computer Science specializing in Data Science. </p>
 
-              <p class = "text-muted">During my free time I like to draw and ink Manga and comics. I have also tried to dabble in Music by occatioanlly playing the Keyboard and the Guitar. Off late, I've picked up a camera and I shoot street photography.</p> 
+              <p class = "text-muted">Growing up, I've always been fond of animals. The only thing that's second to my love for animals is cricket.</p>
 
-              <p class = "text-muted">Growing up, I've always been fond of animals. The only thing that's second to my love for animals is cricket.</p>                          
+              <p class = "text-muted">During my free time I like to draw and ink Manga and comics. I have also tried to dabble in Music by occasionally  playing the Keyboard and the Guitar. Off late, I've picked up a camera and I shoot street photography.</p> 
+
+              <!--<p class = "text-muted">Growing up, I've always been fond of animals. The only thing that's second to my love for animals is cricket.</p>  -->                         
           </div>
           <div class="col-sm-6">
             <div class="team-member">
@@ -815,7 +817,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Search Engines</h2>
                   <p class="item-intro text-muted">March 2018 - Present</p>
-                  <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
+                  <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->                  
                   <ul class = "list-inline">
                      <li>The project aims at building a search engine for twitter data. The objective is to convert Natural Language Queries entered by users to Cassandra queries, which result in top tweets for the query presented.</li>
                     <li>The search and data framework are setup on Amazon Web Services(AWS) and results are displayed on a web framework. </li>
