--- a/My Webpage/Mine/Portfolio/index.html
+++ b/My Webpage/Mine/Portfolio/index.html
@@ -23,6 +23,9 @@
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
 
+    <link rel="shortcut icon" href="img/logos/software-engineer.png" />
+
+
   </head>
 
   <body id="page-top">
@@ -189,8 +192,8 @@
               <img class="img-fluid" src="img/portfolio/cw-proj1.gif" alt="">
             </a>
             <div class="currentproject-caption">
-              <h4>Recommendation Systems</h4>
-              <p class="text-muted">Advanced Algorithms</p>
+              <h4>Search Engine for Twitter Data</h4>
+              <p class="text-muted">Big Data Systems</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 currentproject-item">
@@ -204,7 +207,7 @@
             </a>
             <div class="currentproject-caption">
               <h4>Object Recognition</h4>
-              <p class="text-muted">Natural Language Processing</p>
+              <p class="text-muted">Machine Learning</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 currentproject-item">
@@ -218,7 +221,7 @@
             </a>
             <div class="currentproject-caption">
               <h4>Measuring Cassandra Cluster</h4>
-              <p class="text-muted">Bachelor's Thesis</p>
+              <p class="text-muted">Advanced Database Systems</p>
             </div>
           </div>
     </section>
