--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">Hi There!</div>
-          <div class="intro-heading text-uppercase">Welcome to my World!</div>
+          <!--<div class="intro-heading text-uppercase">Welcome to my World!</div>-->
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#team">More about me!</a>
         </div>
       </div>
