--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="row">
           <div class="col-sm-6">
-              <p class="text-muted">I have a couple of years of experience as a Software Developer at a Startup called Scibler. Scibler is a Data Science company which worked on building an Automated assistant on the iOS platform. I worked mainly on the Natural Language Processing and Machine Learning side. I loved working here as I grow both at a personal and professional level. After helping build a the second product the Scibler Chatbot and getting it to a stable state, I decided to pursue my Master's in Computer Science specializing in Data Science. </p>
+              <p class="text-muted">I have a couple of years of experience as a Software Developer at a Startup called Scibler. Scibler is a Data Science company which worked on building an Automated assistant on the iOS platform. I worked mainly on the Natural Language Processing and Machine Learning side. I loved working here as I grew both at a personal and professional level. After helping build a the second product the Scibler Chatbot and getting it to a stable state, I decided to pursue my Master's in Computer Science specializing in Data Science. </p>
 
               <p class = "text-muted">Growing up, I've always been fond of animals. The only thing that's second to my love for animals is cricket.</p>
 
@@ -202,10 +202,10 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cw-proj2.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/cw-proj2.png" alt="">
             </a>
             <div class="currentproject-caption">
-              <h4>Object Recognition</h4>
+              <h4>Neural Style Transfer</h4>
               <p class="text-muted">Machine Learning</p>
             </div>
           </div>
@@ -851,12 +851,14 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Object Recognition</h2>
+                  <h2 class="text-uppercase">Neural Style Transfer</h2>
                   <p class="item-intro text-muted">March 2018 - Present</p>
                   <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
                   <ul class = "list-inline">
-                     <li>The aim of the project is to use CNNs and other deep learning models to recognize different objects in images with the aim of image summarization.</li>
-                    <li> As a future enhancement we intend to implement parts of Stanford's Visual QA system. </li>
+                     <li>The process of using CNNs to migrate the semantic content of one image to different styles is referred to as Neural Style Transfer. The aim of the project is to build generative and discriminate models using VGG for generating image representations.
+                    <li>In the discriminative model, the idea is to update pixels in the (yet unknown) stylized image iteratively through backpropagation, which starts from random noise. </li>
+                    <li>In generative model however, we first optimize a the model iteratively and produce the styled image through a single forward pass.</li>
+                    <li>The project aims to provide similar results to apps like Prisma,  Ostagram, Deep Forger or Google's Deepdream. </li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
