--- a/index.html
+++ b/index.html
@@ -855,8 +855,8 @@
                   <p class="item-intro text-muted">March 2018 - Present</p>
                   <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
                   <ul class = "list-inline">
-                     <li>The process of using CNNs to migrate the semantic content of one image to different styles is referred to as Neural Style Transfer. The aim of the project is to build generative and discriminate models using VGG for generating image representations.
-                    <li>In the discriminative model, the idea is to update pixels in the (yet unknown) stylized image iteratively through backpropagation, which starts from random noise. </li>
+                     <li>The process of using CNNs to migrate the semantic content of one image to different styles is referred to as Neural Style Transfer. The aim of the project is to build generative and descriptive models using VGG for generating image representations.
+                    <li>In the descriptive model, the idea is to update pixels in the (yet unknown) stylized image iteratively through backpropagation, which starts from random noise. </li>
                     <li>In generative model however, we first optimize a the model iteratively and produce the styled image through a single forward pass.</li>
                     <li>The project aims to provide similar results to apps like Prisma,  Ostagram, Deep Forger or Google's Deepdream. </li>
                   </ul>
