--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <img class="img-fluid" src="img/portfolio/cw-proj1.gif" alt="">
             </a>
             <div class="currentproject-caption">
-              <h4>Search Engine for Twitter Data</h4>
+              <h4>Visual Tweet Analysis for Trending Twitter Data</h4>
               <p class="text-muted">Big Data Systems</p>
             </div>
           </div>
@@ -817,13 +817,16 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Search Engines</h2>
+                  <h2 class="text-uppercase">Visual Tweet Analysis for Trending Twitter Data</h2>
                   <p class="item-intro text-muted">March 2018 - Present</p>
                   <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->                  
                   <ul class = "list-inline">
-                     <li>The project aims at building a search engine for twitter data. The objective is to convert Natural Language Queries entered by users to Cassandra queries, which result in top tweets for the query presented.</li>
+                     <!--<li>The project aims at building a search engine for twitter data. The objective is to convert Natural Language Queries entered by users to Cassandra queries, which result in top tweets for the query presented.</li>
                     <li>The search and data framework are setup on Amazon Web Services(AWS) and results are displayed on a web framework. </li>
-                    <li>Accuracy and Performance measures will be measured by benchmarking against the Twitter API.</li>
+                    <li>Accuracy and Performance measures will be measured by benchmarking against the Twitter API.</li>-->
+                    <li>The project aims at building a visual representation of how trending tweets speread over time.</li>
+                    <li>The visualization is intended to be done in real time</li>
+                    <li>We also intend to use Machine Learning techniques to determine patterns as to why these tweets began to trend.</li>
 
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
