--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cw-proj1.gif" alt="">
+              <img class="img-fluid" src="img/portfolio/cw-proj1.png" alt="">
             </a>
             <div class="currentproject-caption">
               <h4>Visual Tweet Analysis for Trending Twitter Data</h4>
