--- a/index.html
+++ b/index.html
@@ -892,8 +892,9 @@
                   <p class="item-intro text-muted">March 2018 - Present</p>
                   <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
                   <ul class = "list-inline">
-                     <li>This project focuses on measurements across a Cassandra cluster for various topologies. 
-                      We are particularly interested in measurements of latency and clock skew. The topologies consist of different arrangements of VMs, containers and physical hosts. </li>
+                     <li>This project focuses on measurements across a Cassandra cluster for various topologies.</li>>
+                      <li>We are particularly interested in measurements of latency and clock skew.</li>
+                       <li>The topologies consist of different arrangements of VMs, containers and physical hosts. </li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
