--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                      <!--<li>The project aims at building a search engine for twitter data. The objective is to convert Natural Language Queries entered by users to Cassandra queries, which result in top tweets for the query presented.</li>
                     <li>The search and data framework are setup on Amazon Web Services(AWS) and results are displayed on a web framework. </li>
                     <li>Accuracy and Performance measures will be measured by benchmarking against the Twitter API.</li>-->
-                    <li>The project aims at building a visual representation of how trending tweets speread over time.</li>
+                    <li>The project aims at building a visual representation of how trending tweets spread over time.</li>
                     <li>The visualization is intended to be done in real time.</li>
                     <li>We also intend to use Machine Learning techniques to determine patterns as to why these tweets began to trend.</li>
 
