--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
               <p class="text-muted">Advanced Database Systems</p>
             </div>
           </div>
+        </div>
+      </div>
     </section>
 
 
