removed current work

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <h3 class="section-subheading text-muted">This is what I am working on now.</h3>
           </div>
         </div>
-        <div class="row">
+        <!--<div class="row">
           <div class="col-md-4 col-sm-6 currentproject-item">
             <a class="currentproject-link" data-toggle="modal" href="#cwModal1">
               <div class="currentproject-hover">
@@ -223,7 +223,7 @@
               <p class="text-muted">Advanced Database Systems</p>
             </div>
           </div>
-        </div>
+        </div>-->
       </div>
     </section>
 
