--- a/index.html
+++ b/index.html
@@ -295,6 +295,62 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/proj1.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Recommendation Systems</h4>
+              <p class="text-muted">Advanced Algorithms</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/proj1.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Recommendation Systems</h4>
+              <p class="text-muted">Advanced Algorithms</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/proj1.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Recommendation Systems</h4>
+              <p class="text-muted">Advanced Algorithms</p>
+            </div>
+          </div>                                        
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/proj1.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Recommendation Systems</h4>
+              <p class="text-muted">Advanced Algorithms</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
