--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/proj1.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/cw-proj1.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Recommendation Systems</h4>
-              <p class="text-muted">Advanced Algorithms</p>
+              <h4>Tweet Analysis for Trending Twitter Data</h4>
+              <p class="text-muted">Big Data</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -301,11 +301,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/proj1.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/cw-proj2.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Recommendation Systems</h4>
-              <p class="text-muted">Advanced Algorithms</p>
+              <h4>Neural Style Transfer</h4>
+              <p class="text-muted">Machine Learning</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -315,11 +315,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/proj1.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/cw-proj3.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Recommendation Systems</h4>
-              <p class="text-muted">Advanced Algorithms</p>
+              <h4>Measuring Cassandra Cluster</h4>
+              <p class="text-muted">Advanced Database Systems</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
