--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+            <a class="portfolio-link" data-toggle="modal" href="#twitter-modal">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
@@ -295,7 +295,7 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+            <a class="portfolio-link" data-toggle="modal" href="#neural-modal">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
@@ -309,7 +309,7 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+            <a class="portfolio-link" data-toggle="modal" href="#cassandra-modal">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
@@ -671,7 +671,109 @@
     </footer>
 
     <!-- Portfolio Modals -->
+    <!-- Modal 1 -->
+    <div class="portfolio-modal modal fade" id="tweet-modal" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Visual Tweet Analysis for Trending Twitter Data</h2>
+                  <p class="item-intro text-muted">March 2018 - Present</p>
+                  <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/cw-proj1.png" alt=""> -->                 
+                  <ul class = "list-inline">
+                     <!--<li>The project aims at building a search engine for twitter data. The objective is to convert Natural Language Queries entered by users to Cassandra queries, which result in top tweets for the query presented.</li>
+                    <li>The search and data framework are setup on Amazon Web Services(AWS) and results are displayed on a web framework. </li>
+                    <li>Accuracy and Performance measures will be measured by benchmarking against the Twitter API.</li>-->
+                    <li>The project aims at building a visual representation of how trending tweets spread over time.</li>
+                    <li>The visualization is intended to be done in real time.</li>
+                    <li>We also intend to use Machine Learning techniques to determine patterns as to why these tweets began to trend.</li>
 
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> 
+
+    <!-- Modal 2 -->
+    <div class="portfolio-modal modal fade" id="neural-modal" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Neural Style Transfer</h2>
+                  <p class="item-intro text-muted">March 2018 - Present</p>
+                  <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
+                  <ul class = "list-inline">
+                     <li>The process of using CNNs to migrate the semantic content of one image to different styles is referred to as Neural Style Transfer. The aim of the project is to build generative and descriptive models using VGG for generating image representations.
+                    <li>In the descriptive model, the idea is to update pixels in the (yet unknown) stylized image iteratively through backpropagation, which starts from random noise. </li>
+                    <li>In generative model however, we first optimize a the model iteratively and produce the styled image through a single forward pass.</li>
+                    <li>The project aims to provide similar results to apps like Prisma,  Ostagram, Deep Forger or Google's Deepdream. </li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> 
+
+    <!-- Modal 3 -->
+    <div class="portfolio-modal modal fade" id="cassandra-modal" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Measuring a Cassandra Cluster</h2>
+                  <p class="item-intro text-muted">March 2018 - Present</p>
+                  <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
+                  <ul class = "list-inline">
+                     <li>This project focuses on measurements across a Cassandra cluster for various topologies.</li>>
+                      <li>We are particularly interested in measurements of latency and clock skew.</li>
+                       <li>The topologies consist of different arrangements of VMs, containers and physical hosts. </li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>   
     <!-- Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
