--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#twitter-modal">
+            <a class="portfolio-link" data-toggle="modal" href="#tweet-modal">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
