--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
               <img class="img-fluid" src="img/portfolio/cw-proj1.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Tweet Analysis for Trending Twitter Data</h4>
+              <h4>Realtime Analysis Twitter Data</h4>
               <p class="text-muted">Big Data</p>
             </div>
           </div>
@@ -685,7 +685,7 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Visual Tweet Analysis for Trending Twitter Data</h2>
+                  <h2 class="text-uppercase">Realtime Analysis for Twitter Data</h2>
                   <p class="item-intro text-muted">March 2018 - Present</p>
                   <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/cw-proj1.png" alt=""> -->                 
                   <ul class = "list-inline">
