--- a/index.html
+++ b/index.html
@@ -506,7 +506,21 @@
                     <p class="text-muted">I am currently purusing my Master's in Computer Science at University of Colorado at Boulder. My interests like in Data Science (Machine Learning and NLP) and Big data.</p>
                   </div>
                 </div>
-              </li>              
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="img/about/3-twitter.png" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>June 2018 - August 2018</h4>
+                    <h4 class="subheading">Software Developer Intern</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted"> Yet to Begin!</p>
+                  </div>
+                </div>
+              </li>                            
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>Be Part
