--- a/index.html
+++ b/index.html
@@ -323,17 +323,17 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+            <a class="portfolio-link" data-toggle="modal" href="#grdb-modal">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/proj1.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/grdb.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Recommendation Systems</h4>
-              <p class="text-muted">Advanced Algorithms</p>
+              <h4>Contributions to GRDB</h4>
+              <p class="text-muted">Advanced Database Systems</p>
             </div>
           </div>                                        
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -788,6 +788,36 @@
         </div>
       </div>
     </div>   
+    <!-- Modal 4 -->
+    <div class="portfolio-modal modal fade" id="grdb-modal" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Contributions to GRDB</h2>
+                  <p class="item-intro text-muted">March 2018 - Present</p>
+                  <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
+                  <ul class = "list-inline">
+                     <li>TBD</li>>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>       
     <!-- Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
