--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                   <p class="item-intro text-muted">March 2018 - Present</p>
                   <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
                   <ul class = "list-inline">
-                     <li>TBD</li>>
+                     <li>TBD</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
