--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Current Work</h2>
             <h3 class="section-subheading text-muted">This is what I am working on now.</h3>
+            <!-- Remove this when you have projects-->
+            <h3 class="section-subheading text-muted">I am currently working on a summer internship and do not have any ongoing projects at the moment. Please scroll down to check out some of my previous projects.</h3>
           </div>
         </div>
         <!--<div class="row">
