another minor bug fix

--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
                   <p class="item-intro text-muted">March 2018 - Present</p>
                   <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
                   <ul class = "list-inline">
-                     <li>This project focuses on measurements across a Cassandra cluster for various topologies.</li>>
+                     <li>This project focuses on measurements across a Cassandra cluster for various topologies.</li>
                       <li>We are particularly interested in measurements of latency and clock skew.</li>
                        <li>The topologies consist of different arrangements of VMs, containers and physical hosts. </li>
                   </ul>
