Added Twitter and Microsoft

--- a/index.html
+++ b/index.html
@@ -515,14 +515,38 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>June 2018 - August 2018</h4>
+                    <h4>June 2018 - Nov 2018</h4>
                     <h4 class="subheading">Software Developer Intern</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted"> Yet to Begin!</p>
+                    <p class="text-muted"> 
+                      Working as a full stack engineer as part of the DPQ team on a new app management functionality. 
+                      This brings a complete app management experience to the new developer portal at developer.twitter.com, 
+                      allowing developers to create, edit, and manage their client apps all in one place. 
+                      <br/>
+                      Also worked  on internal tool for agents to review and take action client applications. The tool enables agents to get 
+                      immediate feedback about an app stats in the developer portal mentioned above. 
+                      The agents can therefore control permissions for the applications through the tool. 
+                      <br/>
+                      A search infrastructure was put in place where nightly dumps were taken from HDFS and indexed into ElasticSearch
+                    </p>
                   </div>
                 </div>
-              </li>                            
+              </li> 
+              <li>
+                  <div class="timeline-image">
+                    <img class="rounded-circle img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBl-9_NYqv23CfGKG-iAmXEwvyCkh9Czo851VzgRZ74yUTuoeA" alt="">
+                  </div>
+                  <div class="timeline-panel">
+                    <div class="timeline-heading">
+                      <h4>July 2019</h4>
+                      <h4 class="subheading">Microsoft</h4>
+                    </div>
+                    <div class="timeline-body">
+                      <p class="text-muted">Yet to Begin!</p>
+                    </div>
+                  </div>
+                </li>                           
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>Be Part
